--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "express": "^4.19.2",
     "http": "^0.0.1-security",
-    "path": "^0.12.7",
-    "ws": "^8.18.0"
+    "path": "^0.12.7"
+  },
+  "scripts": {
+        "start": "node server.js"
   }
 }
